--- a/doc/todo
+++ b/doc/todo
@@ -1,16 +1,16 @@
-Verify that byte and Unicode strings are used consistently.
-Document how they are used.
+* Verify that byte and Unicode strings are used consistently.
+  Document how they are used.
 
-The ``FileUri`` class is ugly.
-Implement a nicer interface.
+* The ``FileUri`` class is ugly.
+  Implement a nicer interface.
 
-Add an example for using streams.
+* Add an example for using streams.
 
-Improve the test suite.
+* Improve the test suite.
 
-   Track test coverage.
+* Track test coverage.
 
-   Cython ≥ 0.23 provides the plugin ``Cython.Coverage``
-   that can be added to ``.coveragerc``.
+* Cython ≥ 0.23 provides the plugin ``Cython.Coverage``
+  that can be added to ``.coveragerc``.
 
 .. vim:ft=rst ts=3 sts=3 sw=3 et tw=72
